package com.iting.jobportal.job.entity.enums;

public enum ExperienceLevel {
    INTERN, // Thực tập sinh
    FRESHER, // Mới ra trường
    JUNIOR, // 1-2 năm
    MIDDLE, // 2-4 năm
    MID_LEVEL, // 2-4 năm (Mid-level)
    SENIOR, // 4-7 năm
    LEAD, // 7+ năm
    EXPERT, // Chuyên gia
    MANAGER // Quản lý
}
