package com.iting.jobportal.job.entity.enums;

public enum JobReviewAction {
  CREATED,
  SUBMITTED,
  APPROVED,
  REJECTED,
  REQUEST_REVISION,
  SUSPENDED,
  UPDATED
}
