package com.iting.jobportal.job.entity.enums;

public enum JobStatus {
    PENDING,
    ACTIVE,
    EXPIRED,
    CLOSED,
    REJECTED,
    SUSPENDED
}