package com.iting.jobportal.job.entity.enums;

public enum JobType {
    FULL_TIME, // Toàn thời gian
    PART_TIME, // Bán thời gian
    CONTRACT, // Hợp đồng
    INTERNSHIP, // Thực tập
    REMOTE, // Làm việc từ xa
    FREELANCE // Tự do
}
