package com.iting.jobportal.job.entity.enums;

public enum SalaryType {
  MONTH,
  YEAR,
  HOUR,
  PROJECT,
  NEGOTIABLE
}
