package com.iting.jobportal.job.entity.enums;

public enum WorkingDays {
    MON_TO_FRI, // Thứ 2 - Thứ 6
    MON_TO_SAT, // Thứ 2 - Thứ 7
    FLEXIBLE // Linh động
}
